# quip-protocol-rs

./: .dockerignore  .gitignore  .gitlab-ci.yml  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.revive.yml  docker-compose.yml  entrypoint.sh
.cargo/: config.toml
.gitlab/: ci-toolchain.Dockerfile
crates/quantum-validation/: Cargo.toml
crates/quantum-validation/src/: diversity.rs  energy.rs  errors.rs  fixed.rs  ising.rs  lib.rs  packed.rs  puzzle_spec.rs  validation.rs
crates/quantum-validation/tests/: python_parity.rs
crates/quantum-validation/tests/fixtures/: python_parity.json
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
crates/transaction-crypto/: Cargo.toml
crates/transaction-crypto-core/: Cargo.toml
crates/transaction-crypto-core/src/: lib.rs
crates/transaction-crypto-core/tests/: golden_parity.rs  golden_vectors.txt
crates/transaction-crypto-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/transaction-crypto-py/python/quip_signer/: __init__.py  __init__.pyi
crates/transaction-crypto-py/src/: lib.rs
crates/transaction-crypto-py/tests/: test_api.py  test_parity.py
crates/transaction-crypto-wasm/: Cargo.toml
crates/transaction-crypto-wasm/src/: lib.rs
crates/transaction-crypto/examples/: derive_genesis_keys.rs  dump_dev_seeds.rs
crates/transaction-crypto/src/: lib.rs
docker/: revive-eth-rpc.Dockerfile  subscan-essentials.Dockerfile  subscan-ui-entrypoint.sh  subscan-ui.Dockerfile
docs/: falcon-hybrid-signature-plan.md  genesis-quip-testnet.md  hybrid-crypto-dedup-plan.md  hybrid-signature-storage-impact.md  indexer-free-quantum-storage-rpc-plan.md  metadata-v15-external-decoding-plan.md  miner-registry-system-info-v2-spec.md  network-upgrade-cli-plan.md  network-upgrade-cli.md  pallet-revive-integration.md  pyo3-bindings-plan.md  quantum-compute-mempool.md  quantum-pow-difficulty-convergence-plan.md  quantum-pow-difficulty-hardening-walkup-plan.md  quip-protocol-on-chain-miner-data-plan.md  release.md  releasing-quip-signer.md  substrate-integration-07032026.md  testnet-keys.md  topology-upgrade.md
docs/polkadotjs/: README.md  wasm-signing-plan.md
docs/superpowers/plans/: 2026-06-23-qpow-topology-binding.md  2026-07-03-qblock-device-access-time.md
env-setup/: rust-toolchain.toml
js/quip-signer/: README.md  package.json  tsconfig.json
js/quip-signer/src/: index.ts
js/quip-transaction-crypto-wasm/: .gitignore  package.json
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  insert_hybrid_key.rs  main.rs  rpc.rs  service.rs
pallets/faucet-ops/: Cargo.toml
pallets/faucet-ops/src/: lib.rs  mock.rs  tests.rs  weights.rs
pallets/miner-registry/: Cargo.toml
pallets/miner-registry/src/: lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/quantum-compute-mempool/: Cargo.toml
pallets/quantum-compute-mempool/src/: benchmarking.rs  delivery.rs  lib.rs  lifecycle.rs  mock.rs  rewards.rs  tests.rs  types.rs  weights.rs  xqvm.rs
pallets/quantum-pow/: Cargo.toml
pallets/quantum-pow/src/: benchmarking.rs  difficulty.rs  lib.rs  mock.rs  tests.rs  topology.rs  types.rs  weights.rs
pallets/template/: Cargo.toml
pallets/template/src/: weights.rs
pallets/xqvm/: Cargo.toml
pallets/xqvm/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
primitives/crypto/: Cargo.toml
primitives/crypto/src/: domain.rs  ed25519_mldsa44.rs  error.rs  fixed.rs  lib.rs  seed.rs  sr25519_mldsa44.rs  suite.rs
primitives/crypto/src/classical/: ed25519.rs  mod.rs  sr25519.rs
primitives/crypto/src/pq/: mldsa44.rs  mod.rs
primitives/crypto/src/substrate/: ed25519_mldsa44.rs  mod.rs  signature.rs  sr25519_mldsa44.rs
primitives/crypto/src/suite/: ed25519_mldsa44.rs  mod.rs  sr25519_mldsa44.rs
primitives/stateful-crypto/: Cargo.toml
primitives/stateful-crypto/src/: lib.rs  wots_plus.rs
py/quip-signer/: .gitignore  README.md
runtime/: Cargo.toml
runtime/src/: apis.rs  benchmarks.rs  genesis_config_presets.rs  lib.rs
runtime/src/configs/: mod.rs
runtime/src/genesis_quip_testnet/: operator_1_babe.hex  operator_1_grandpa.hex  operator_2_babe.hex  operator_2_grandpa.hex  operator_3_babe.hex  operator_3_grandpa.hex
scripts/: check-revive-sidecar.sh  check-subscan-evm-indexer.sh  check-subscan-ui.sh  derive-operator-keys.sh  generate_quantum_validation_fixtures.py  push-weights.sh  python-dists.sh  quip_signer_wheel_smoke.py  run-benchmarks.sh  start-local3.sh
