[package]
name = "quip-transaction-crypto-wasm"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

# Optimize the generated browser bundle for size. wasm-pack runs wasm-opt with
# these flags after wasm-bindgen; `-Oz` favors size over speed (the signer is
# not on a hot path in the browser).
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz', '--strip-debug']

[lints]
workspace = true

[dependencies]
getrandom = { features = ["js"], workspace = true }
hex = { features = ["alloc"], workspace = true }
quip-transaction-crypto-core = { workspace = true, default-features = false }
wasm-bindgen.workspace = true

[features]
default = []
std = [
    "getrandom/std",
    "hex/std",
    "quip-transaction-crypto-core/std",
]
