[package]
name = "quip-transaction-crypto"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
quip-crypto-primitives = { workspace = true, default-features = false }
scale-info = { features = ["derive"], workspace = true }
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true

[features]
default = ["std"]
std = [
    "codec/std",
    "quip-crypto-primitives/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
]
