[package]
name = "quip-transaction-crypto"
version = "0.2.1"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
log = { version = "0.4", default-features = false }
quip-crypto-primitives = { workspace = true, default-features = false }
quip-transaction-crypto-core = { workspace = true, default-features = false }
scale-info = { features = ["derive"], workspace = true }
sp-core.workspace = true
sp-runtime.workspace = true

[features]
default = ["std"]
std = [
    "codec/std",
    "log/std",
    "quip-crypto-primitives/std",
    "quip-transaction-crypto-core/std",
    "scale-info/std",
    "sp-core/std",
    "sp-runtime/std",
]
