[package]
name = "pallet-faucet-ops"
description = "FRAME pallet for root-controlled faucet mint operations."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
frame-support.workspace = true
frame-system.workspace = true
pallet-balances.workspace = true
scale-info = { features = ["derive"], workspace = true }

[dev-dependencies]
sp-io = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }

[features]
default = ["std"]
std = [
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-balances/std",
  "scale-info/std",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "pallet-balances/try-runtime",
]
