[package]
name = "pallet-miner-registry"
description = "FRAME pallet for QUIP miner descriptors and qblock participation."
version = "0.2.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
frame-support.workspace = true
frame-system.workspace = true
pallet-balances.workspace = true
scale-info = { features = ["derive"], workspace = true }
sp-api.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true

[dev-dependencies]
sp-io = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }

[features]
default = ["std"]
std = [
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-balances/std",
  "scale-info/std",
  "sp-api/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "pallet-balances/try-runtime",
  "sp-runtime/try-runtime",
]
