[package]
name = "quip-crypto-primitives"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
sp-core = { workspace = true }
schnorrkel = { workspace = true }
fips204 = "0.4"
blake2 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
subtle = "2.6"
zeroize = { version = "1", features = ["derive"] }
rand_core = "0.6"

[features]
default = ["std"]
std = ["sp-core/std"]
