[package]
name = "quip-crypto-primitives"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true }
schnorrkel = { workspace = true }
ed25519-zebra = { version = "4", default-features = false }
fips204 = "0.4"
blake2 = "0.10"
hkdf = "0.12"
sha2 = "0.10" # can't be bumped to 0.11 as it breaks other dependencies.
subtle = "2.6"
zeroize = { version = "1", features = ["derive"] }
rand_core = "0.6" # can't be bumped due to schnorrkel and fips204 depending on this api version.
thiserror = { version = "1", optional = true }

[features]
default = ["std"]
std = ["sp-core/std", "sp-core/full_crypto", "dep:thiserror"]
full_crypto = ["sp-core/full_crypto"]

[dev-dependencies]
sp-application-crypto = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603", default-features = false, features = ["std"] }
sp-consensus-babe = { workspace = true, default-features = false, features = ["std"] }
