[package]
name = "sp-stateful-crypto"
description = "Stateful signature primitives for Quip Protocol (WOTS+, cryptographic agility trait)."
version = "0.1.0"
license = "MIT-0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
sp-core.workspace = true
hashsigs-rs.workspace = true
thiserror = { workspace = true, optional = true }

[dev-dependencies]
sp-io = { default-features = true, workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-core/std",
    "thiserror"
]